@@ -234,3 +234,4 @@ Elements in those items (all variable items with only one extent) are now presen
 Not versioned yet
 Issue #166 Scale missing from Mode 5 GNSS-derived Altitude in I062/110
 Issue #167 Subfield 8 of I062/380 (Trajectory Intent Status) should be defined as Variable in xml config
+Issue #168 Error codes from write are not detected
